# ChangeLog for dev-perl/IO-Socket-SSL
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Socket-SSL/ChangeLog,v 1.99 2009/01/23 08:30:21 tove Exp $

*IO-Socket-SSL-1.21 (23 Jan 2009)

  23 Jan 2009; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.21.ebuild:
  Version bump

*IO-Socket-SSL-1.20 (16 Jan 2009)

  16 Jan 2009; Robin H. Johnson <robbat2@gentoo.org>
  +IO-Socket-SSL-1.20.ebuild:
  Version bump via perl-bump experimental tool.

  09 Jan 2009; Joseph Jezak <josejx@gentoo.org> IO-Socket-SSL-1.18.ebuild,
  IO-Socket-SSL-1.19.ebuild:
  Marked ~ppc for bug #235533.

*IO-Socket-SSL-1.19 (31 Dec 2008)

  31 Dec 2008; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.19.ebuild:
  Version bump

  30 Dec 2008; Torsten Veller <tove@gentoo.org> -IO-Socket-SSL-1.16.ebuild,
  -IO-Socket-SSL-1.17.ebuild:
  Cleanup

*IO-Socket-SSL-1.18 (26 Nov 2008)

  26 Nov 2008; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.18.ebuild:
  Version bump

  09 Nov 2008; Mike Frysinger <vapier@gentoo.org> IO-Socket-SSL-1.16.ebuild,
  IO-Socket-SSL-1.17.ebuild:
  Add arm/s390/sh #235533.

*IO-Socket-SSL-1.17 (20 Oct 2008)

  20 Oct 2008; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.17.ebuild:
  Version bump

*IO-Socket-SSL-1.16 (20 Sep 2008)

  20 Sep 2008; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.16.ebuild:
  Version bump

  15 Sep 2008; Torsten Veller <tove@gentoo.org> -IO-Socket-SSL-0.97.ebuild,
  -IO-Socket-SSL-0.99.9.ebuild, -IO-Socket-SSL-1.01.ebuild,
  -IO-Socket-SSL-1.02.ebuild, -IO-Socket-SSL-1.03.ebuild,
  -IO-Socket-SSL-1.04.ebuild, -IO-Socket-SSL-1.05.ebuild,
  -IO-Socket-SSL-1.06.ebuild, -IO-Socket-SSL-1.07.ebuild,
  -IO-Socket-SSL-1.14.ebuild:
  Cleanup

*IO-Socket-SSL-1.15 (01 Sep 2008)

  01 Sep 2008; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.15.ebuild:
  Version bump. Should fix #235604

*IO-Socket-SSL-1.14 (23 Aug 2008)
