@@ -1,8 +1,10 @@
 DIST IO-Socket-SSL-1.19.tar.gz 63168 RMD160 ac717ccbdc3202d2a5abe3dcff857a79e1b7fe50 SHA1 b3aa9fffa6f946cfb2f8355d1b61cc1a13b88a2e SHA256 1607b66d2059bacad5033d337272e564bf70c64e2680f55e28437c449271f620
 DIST IO-Socket-SSL-1.20.tar.gz 63330 RMD160 d067027ee53666d723e526e5bb8049213477a1bc SHA1 6ee5b4839f76b98c1d16d2a002593f5ff65f1312 SHA256 d703a48aa407b29345cd1a0d42fdb807243d8efceb6abc7698e29523d810daa4
 DIST IO-Socket-SSL-1.21.tar.gz 63414 RMD160 ffa10043d90e853d5f40d0d2419214b35086feb1 SHA1 fb72d7c4b6b5e029d1ec2d1484831dd478d02811 SHA256 ce6abdc3f1168493db1d4299706f1d9b824ba77daab006ae9640f50bad25a9ea
+DIST IO-Socket-SSL-1.22.tar.gz 63494 RMD160 42299df7226905b15cc1f4d502138c93436aa6ba SHA1 9a942f903ee9612f9ec192d6cc768d45ed9c0990 SHA256 1d5fe7b849118680ab000d5b47729622bc9714af9bfd381d94c2ec1359d799c6
 EBUILD IO-Socket-SSL-1.19.ebuild 653 RMD160 dcc9386989c68ba77535389d9817d3452ce08d31 SHA1 52d65748087d36c86c55a1ea2e9fddf7ac66612a SHA256 b22c2ff8b0b540e4bdfb3435f507b44530212608b76c86771035a966ad10543a
 EBUILD IO-Socket-SSL-1.20.ebuild 654 RMD160 4fbe73859cae4f624aedc12e22c273b9f988a58f SHA1 68448e036dbdc429818fef631a30afd11ad5a0c6 SHA256 d734302743422fcfd84814fef79306e59a73a4a135f4a01717770d4d5dac0c93
 EBUILD IO-Socket-SSL-1.21.ebuild 651 RMD160 086dd916a29966204b229753c3886a17d29fd82f SHA1 df3c48c10354202c5b268c79cf9a0b65ec634eb5 SHA256 edeaff603f810d7cc0ccef5fdcd69507a018b6a5af72379aaa8df317fd666286
-MISC ChangeLog 11970 RMD160 4ca330f5144484f3d522c2a83dbb9580b8da41c6 SHA1 159ed383e8dc87c1742eaacc05ea583172041701 SHA256 3420c954dad7a9ad37e2796f217acc22456d221c7119981d7ef9b83e3ed9a9ec
+EBUILD IO-Socket-SSL-1.22.ebuild 651 RMD160 1d9ecdaa0fd6ca9976c1462fea7c5f168e758476 SHA1 d2f7112e2da5e40202a6f746b15a5deee7cc4cf1 SHA256 f87766c54b64033d49100c2e873ba60c1294ee1062b191a79d5852bbbce89ec6
+MISC ChangeLog 12098 RMD160 dab055e7ea2270e1fbe4efc090c60670e38b5348 SHA1 fb327b9b07a372beb51427b3bd2feb21291ec34a SHA256 be77baf12fd91aaa0b379c31a35b6fdb7d8016485d3339eb934d830e498a3f0f
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
