@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/IO-Socket-SSL
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Socket-SSL/ChangeLog,v 1.99 2009/01/23 08:30:21 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Socket-SSL/ChangeLog,v 1.100 2009/01/26 08:11:16 tove Exp $
+
+*IO-Socket-SSL-1.22 (26 Jan 2009)
+
+  26 Jan 2009; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.22.ebuild:
+  Version bump
 
 *IO-Socket-SSL-1.21 (23 Jan 2009)
 
